# acea_kaggle

./: .gitignore  Arno_Places.ipynb  Dockerfile  Untitled.ipynb  Untitled1.ipynb  arno_places.txt  better_geo_lookup.ipynb  cache_data.py  dockerrun  location-table.html  mvp.ipynb  mvp2.ipynb  pyproject.toml  requirements.txt  research.txt  validation_grid.py
data/: geo.txt
data/chunked/: amiata10.csv  amiata135.csv  amiata15.csv  amiata180.csv  amiata270.csv  amiata30.csv  amiata360.csv  amiata5.csv  amiata60.csv  amiata90.csv  arno10.csv  arno135.csv  arno15.csv  arno180.csv  arno270.csv  arno30.csv  arno360.csv  arno5.csv  arno60.csv  arno90.csv  auser10.csv  auser135.csv  auser15.csv  auser180.csv  auser270.csv  auser30.csv  auser360.csv  auser5.csv  auser60.csv  auser90.csv  bilancino10.csv  bilancino135.csv  bilancino15.csv  bilancino180.csv  bilancino270.csv  bilancino30.csv  bilancino360.csv  bilancino5.csv  bilancino60.csv  bilancino90.csv  (+50 more)
data/geo/: geo.csv  geo.txt  stazioni.csv  (+2 more)
mods/: clean.py  data.py  models.py  validate.py
notebooks/: all_raw.ipynb  aquifer.ipynb  better_geo_lookup.ipynb  first_processing.ipynb  generate_map_json.ipynb  geodata.ipynb  rivers.ipynb
research/: acea-riverarno.ipynb  acea-smart-water-analytics-data-understanding.ipynb  acea-smart-water-analytics-understanding-the-data.ipynb  acea-smart-water-analytics.ipynb  amiata.umap  amiata_places.txt  arno.umap  arno_places.txt  auser.umap  auser_places.txt  god-save-water.ipynb  luco.umap  luco_places.txt  notes.txt  river-level-detection-using-lstm.ipynb  sssssscience?.txt
(+1338 files in other folders)
