[tool.poetry]
name = "acea"
version = "0.1.0"
description = ""
authors = ["Chris Shields <christopher.shields143@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
numpy = "^1.19.4"
scikit-learn = "^0.24.0"
matplotlib = "^3.3.3"
statsmodels = "^0.12.1"
jupyterlab = "^3.0.0"
miceforest = "^2.0.3"
tqdm = "^4.55.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
